# RayTracer

./: CMakeLists.txt  README.md  run.sh
include/: aabb.hpp  aarect.hpp  box.hpp  bvh.hpp  constant_medium.hpp  hittable.hpp  hittable_list.hpp  mesh.hpp  moving_sphere.hpp  ncamera.hpp  ncolor.hpp  nmaterial.hpp  nsphere.hpp  ntriangle.hpp  perlin.hpp  ray.hpp  scenes.hpp  texture.hpp  translate.hpp  util_stb_image.h  utils.hpp
output/: allObjects.ppm  eg.ppm  meshTest.ppm  random_spheres_motion_rough.ppm  test.ppm
src/: main.cpp  mesh.cpp
